using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimatorConstants : MonoBehaviour
{
    public const string Walk = "Walk";
    public const string Height = "Height";
    public const string HoldSnowBallInHandHeight = "HoldSnowBallInHandHeight";
    public const string HoldSnowBallInHand = "HoldSnowBallInHand";
    public const string Fall = "Fall";
    public const string OnWatter = "OnWatter";
    public const string WinDance = "WinDance";
    public const string BackWalk = "BackWalk";
    public const string CloseFrontDoor = "CloseFrontDoor";
    public const string OpenBackDoor = "OpenBackDoor";
    public const string Stand = "Stand";
    public const string OnSetOnSpringBoard = "OnSetOnSpringBoard";
    public const string OnElevator = "OnElevator";
    public const string OnJumpedTuCart = "OnJumpedTuCart";
    public const string OnStopedFolowCart = "OnStopedFolowCart";
}
